# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_image", "docker_layers", "docker_pkg", "docker_push")

docker_layers(
    name = "cvng-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "cvng-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
    ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//300-cv-nextgen:cv-nextgen-config.yml",
        "//300-cv-nextgen:keystore.jks",
        "//300-cv-nextgen/src/main/resources:enterprise-redisson-jcache.yaml",
        "//300-cv-nextgen/src/main/resources:redisson-jcache.yaml",
    ],
    files = {
        "//300-cv-nextgen:module_deploy.jar": "cv-nextgen-capsule.jar",
    },
)

docker_image(
    name = "cvng-saas-image",
    cmd = [
        "/bin/bash",
        "-c",
        "java -jar cv-nextgen-capsule.jar scan-classpath-metadata; ./run.sh",
    ],
    dockerlayers = [
        ":cvng-saas-run",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "cvng-saas-push",
    image = "cvng-saas-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/cvng-saas-bazel-test",
)

docker_image(
    name = "cvng-onprem-image",
    cmd = [
        "/bin/bash",
        "-c",
        "java -jar cv-nextgen-capsule.jar scan-classpath-metadata; ./run.sh",
    ],
    dockerlayers = [
        ":cvng-onprem-run",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "cvng-onprem-push",
    image = "cvng-onprem-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/cvng-onprem-bazel-test",
)
