# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_image", "docker_layers", "docker_pkg", "docker_push")

docker_layers(
    name = "eventsapi-monitor-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "eventsapi-monitor-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
    ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//950-events-framework-monitor:config.yml",
        "//950-events-framework-monitor:redis/install_redis.sh",
        "//950-events-framework-monitor:redis/redislabs_ca.pem",
    ],
    files = {
        "//950-events-framework-monitor:module_deploy.jar": "eventsapi-monitor-capsule.jar",
    },
)

docker_image(
    name = "eventsapi-monitor-saas-image",
    cmd = [
        "/bin/bash",
        "-c",
        "./run.sh",
    ],
    dockerlayers = [
        ":eventsapi-monitor-saas-run",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "eventsapi-monitor-saas-push",
    image = "eventsapi-monitor-saas-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/eventsapi-monitor-saas-bazel-test",
)

docker_image(
    name = "eventsapi-monitor-onprem-image",
    cmd = [
        "/bin/bash",
        "-c",
        "./run.sh",
    ],
    dockerlayers = [
        ":eventsapi-monitor-onprem-run",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "eventsapi-monitor-onprem-push",
    image = "eventsapi-monitor-onprem-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/eventsapi-monitor-onprem-bazel-test",
)
