load("//:tools/bazel/docker/docker-utils.bzl", "docker_layers", "docker_image", "docker_push", "docker_pkg")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

docker_layers(
    name = "manager-onprem-run",
    commands = [
        "curl -L https://harness.jfrog.io/artifactory/BuildsTools/docker/inspectit-ocelot-agent/inspectit-ocelot-agent-1.16.0.jar --output inspectit-ocelot-agent-1.16.0.jar",
        "chmod 711 inspectit-ocelot-agent-1.16.0.jar",
    ],
)

docker_layers(
    name = "manager-saas-run",
    commands = [
            "curl https://get.et.harness.io/releases/latest/nix/harness-et-agent.tar.gz --output harness-et-agent.tar.gz",
            "tar -xzf harness-et-agent.tar.gz -C /opt/harness",
            "rm /opt/harness/harness-et-agent.tar.gz",
            "curl https://harness.jfrog.io/artifactory/BuildsTools/docker/apm/appd/AppServerAgent-1.8-21.11.2.33305.zip --output AppServerAgent-1.8-21.11.2.33305.zip",
            "curl https://harness.jfrog.io/artifactory/BuildsTools/docker/apm/opentelemetry/opentelemetry-javaagent.jar --output opentelemetry-javaagent.jar",
            "chmod 711 /opt/harness/harness AppServerAgent-1.8-21.11.2.33305.zip opentelemetry-javaagent.jar",
        ],
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
        ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//360-cg-manager:newrelic.yml",
        "//360-cg-manager:keystore.jks",
        "//360-cg-manager:config.yml",
        "//400-rest/src/main/resources:redisson-jcache.yaml",
        "//400-rest/src/main/resources:hazelcast.xml",
    ],
    files = {
        "//360-cg-manager:module_deploy.jar": "rest-capsule.jar",
        },
)

docker_image(
    name = "manager-saas-image",
    dockerlayers = [
            ":manager-saas-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "java -jar rest-capsule.jar scan-classpath-metadata; ./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "manager-saas-push",
        image = "manager-saas-image",
        repository = "platform-205701/harness/harness-services-bazel/manager-saas-bazel-test",
        imagetag = "$(TAG)",
)

docker_image(
    name = "manager-onprem-image",
    dockerlayers = [
            ":manager-onprem-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "java -jar rest-capsule.jar scan-classpath-metadata; ./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "manager-onprem-push",
        image = "manager-onprem-image",
        repository = "platform-205701/harness/harness-services-bazel/manager-onprem-bazel-test",
        imagetag = "$(TAG)",
)
