# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

# NOTE: Migrator is not yet moved to use ubi base images. This is still on alpine.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_layers", "docker_image", "docker_push", "docker_pkg")

docker_layers(
    name = "migrator-packages",
    docker_run_flags = [
        "--user=root",
    ],
    commands = [
        "microdnf install fontconfig dejavu-sans-fonts",
    ],
)

docker_layers(
    name = "migrator-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "migrator-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
        ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//100-migrator:newrelic.yml",
        "//100-migrator:keystore.jks",
        "//100-migrator:config.yml",
        "//400-rest/src/main/resources:redisson-jcache.yaml",
        "//400-rest/src/main/resources:hazelcast.xml",
    ],
    files = {
        "//100-migrator:module_deploy.jar": "migrator-capsule.jar",
        },
)

docker_image(
    name = "migrator-saas-image",
    dockerlayers = [
            ":migrator-saas-run",
            ":migrator-packages",
            ],
    cmd = [
        "/bin/bash", "-c",
        "java -jar migrator-capsule.jar scan-classpath-metadata; ./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "migrator-saas-push",
        image = "migrator-saas-image",
        repository = "platform-205701/harness/harness-services-bazel/migrator-saas-bazel-test",
        imagetag = "$(TAG)",
)

docker_image(
    name = "migrator-onprem-image",
    dockerlayers = [
            ":migrator-onprem-run",
            ":migrator-packages",
            ],
    cmd = [
        "/bin/bash", "-c",
        "java -jar migrator-capsule.jar scan-classpath-metadata; ./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "migrator-onprem-push",
        image = "migrator-onprem-image",
        repository = "platform-205701/harness/harness-services-bazel/migrator-onprem-bazel-test",
        imagetag = "$(TAG)",
)
