# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

# NOTE: Migrator is not yet moved to use ubi base images. This is still on alpine.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_image", "docker_layers", "docker_pkg", "docker_push")

docker_layers(
    name = "migrator-packages",
    commands = [
        "microdnf install fontconfig dejavu-sans-fonts",
    ],
    docker_run_flags = [
        "--user=root",
    ],
)

docker_layers(
    name = "migrator-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "migrator-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
    ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//100-migrator:config.yml",
        "//100-migrator:keystore.jks",
        "//100-migrator:newrelic.yml",
        "//400-rest/src/main/resources:hazelcast.xml",
        "//400-rest/src/main/resources:redisson-jcache.yaml",
    ],
    files = {
        "//100-migrator:module_deploy.jar": "migrator-capsule.jar",
    },
)

docker_image(
    name = "migrator-saas-image",
    cmd = [
        "/bin/bash",
        "-c",
        "java -jar migrator-capsule.jar scan-classpath-metadata; ./run.sh",
    ],
    dockerlayers = [
        ":migrator-saas-run",
        ":migrator-packages",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "migrator-saas-push",
    image = "migrator-saas-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/migrator-saas-bazel-test",
)

docker_image(
    name = "migrator-onprem-image",
    cmd = [
        "/bin/bash",
        "-c",
        "java -jar migrator-capsule.jar scan-classpath-metadata; ./run.sh",
    ],
    dockerlayers = [
        ":migrator-onprem-run",
        ":migrator-packages",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "migrator-onprem-push",
    image = "migrator-onprem-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/migrator-onprem-bazel-test",
)
