# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_image", "docker_layers", "docker_pkg", "docker_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

docker_layers(
    name = "ng-manager-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "ng-manager-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
    ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//120-ng-manager:config.yml",
        "//120-ng-manager:keystore.jks",
        "//120-ng-manager/src/main/resources:enterprise-redisson-jcache.yaml",
        "//120-ng-manager/src/main/resources:redisson-jcache.yaml",
    ],
    files = {
        "//120-ng-manager:module_deploy.jar": "ng-manager-capsule.jar",
    },
)

docker_image(
    name = "ng-manager-saas-image",
    cmd = [
        "/bin/bash",
        "-c",
        "java -jar ng-manager-capsule.jar scan-classpath-metadata; ./run.sh",
    ],
    dockerlayers = [
        ":ng-manager-saas-run",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "ng-manager-saas-push",
    image = "ng-manager-saas-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/ng-manager-saas-bazel-test",
)

docker_image(
    name = "ng-manager-onprem-image",
    cmd = [
        "/bin/bash",
        "-c",
        "java -jar ng-manager-capsule.jar scan-classpath-metadata; ./run.sh",
    ],
    dockerlayers = [
        ":ng-manager-onprem-run",
    ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "ng-manager-onprem-push",
    image = "ng-manager-onprem-image",
    imagetag = "$(TAG)",
    repository = "platform-205701/harness/harness-services-bazel/ng-manager-onprem-bazel-test",
)
