# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_layers", "docker_image", "docker_push", "docker_pkg")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

docker_layers(
    name = "template-service-run",
    commands = [
        "curl https://get.et.harness.io/releases/latest/nix/harness-et-agent.tar.gz --output harness-et-agent.tar.gz",
        "tar -xzf harness-et-agent.tar.gz -C /opt/harness",
        "rm /opt/harness/harness-et-agent.tar.gz",
        "curl https://harness.jfrog.io/artifactory/BuildsTools/docker/apm/appd/AppServerAgent-1.8-21.11.2.33305.zip --output AppServerAgent-1.8-21.11.2.33305.zip",
        "curl https://harness.jfrog.io/artifactory/BuildsTools/docker/apm/opentelemetry/opentelemetry-javaagent.jar --output opentelemetry-javaagent.jar",
        "chmod 711 /opt/harness/harness AppServerAgent-1.8-21.11.2.33305.zip opentelemetry-javaagent.jar",
    ],
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
        ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//840-template-service:config.yml",
        "//840-template-service/src/main/resources:redisson-jcache.yaml"
    ],
    files = {
        "//840-template-service:module_deploy.jar": "template-service-capsule.jar",
        },
)

docker_image(
        name = "template-service-image",
        dockerlayers = [
            ":template-service-run"
            ],
        cmd = [
            "./run.sh",
            ],
        filestocopy = [
            ":files",
            ":scripts",
        ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "template-service-push",
    image = "template-service-image",
    repository = "platform-205701/harness/harness-services-bazel/template-service-bazel-test",
    imagetag = "$(TAG)",
)
