# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_layers", "docker_image", "docker_push", "docker_pkg")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

docker_layers(
    name = "template-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "template-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
        ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//840-template-service:config.yml",
        "//840-template-service/src/main/resources:redisson-jcache.yaml"
    ],
    files = {
        "//840-template-service:module_deploy.jar": "template-service-capsule.jar",
        },
)

docker_image(
        name = "template-saas-image",
        dockerlayers = [
            ":template-saas-run"
            ],
        cmd = [
            "./run.sh",
            ],
        filestocopy = [
            ":files",
            ":scripts",
        ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "template-saas-push",
    image = "template-saas-image",
    repository = "platform-205701/harness/harness-services-bazel/template-saas-bazel-test",
    imagetag = "$(TAG)",
)

docker_image(
        name = "template-onprem-image",
        dockerlayers = [
            ":template-onprem-run"
            ],
        cmd = [
            "./run.sh",
            ],
        filestocopy = [
            ":files",
            ":scripts",
        ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
    name = "template-onprem-push",
    image = "template-onprem-image",
    repository = "platform-205701/harness/harness-services-bazel/template-onprem-bazel-test",
    imagetag = "$(TAG)",
)
