# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("//:tools/bazel/docker/docker-utils.bzl", "docker_layers", "docker_image", "docker_push", "docker_pkg")

docker_layers(
    name = "verification-onprem-run",
    build_type = "onprem",
)

docker_layers(
    name = "verification-saas-run",
    build_type = "saas",
)

docker_pkg(
    name = "scripts",
    srcs = glob([
        "scripts/*",
        ]),
)

docker_pkg(
    name = "files",
    srcs = [
        "//:protocol.info",
        "//270-verification:keystore.jks",
        "//270-verification:verification-config.yml",
    ],
    files = {
        "//270-verification:module_deploy.jar": "verification-capsule.jar",
        },
)

docker_image(
    name = "verification-saas-image",
    dockerlayers = [
            ":verification-saas-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "verification-saas-push",
        image = "verification-saas-image",
        repository = "platform-205701/harness/harness-services-bazel/verification-saas-bazel-test",
        imagetag = "$(TAG)",
)

docker_image(
    name = "verification-onprem-image",
    dockerlayers = [
            ":verification-onprem-run"
            ],
    cmd = [
        "/bin/bash", "-c",
        "./run.sh",
        ],
    filestocopy = [
        ":files",
        ":scripts",
    ],
)

#Pass the TAG from the bazel run command by passing --define=TAG=TagValue
docker_push(
        name = "verification-onprem-push",
        image = "verification-onprem-image",
        repository = "platform-205701/harness/harness-services-bazel/verification-onprem-bazel-test",
        imagetag = "$(TAG)",
)
