load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

HarnessTeam = "PL"

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//120-ng-manager/modules/ngsettings/src/main/resources:resource",
    ],
    visibility = ["//120-ng-manager:__subpackages__"],
    deps = [
        "//:lombok",
        "//120-ng-manager/modules/ngsettings/contracts:module",
        "//955-outbox-sdk:module",
        "//960-persistence:module",
        "//970-ng-commons:module",
        "//980-commons:module",
        "//999-annotations:module",
    ],
)

run_analysis()
